--- a/manifest/package.xml
+++ b/manifest/package.xml
@@ -1,40 +1,13 @@
-<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
-    <types>
-        <members>CaseController</members>
-        <name>ApexClass</name>
-    </types>
-    <types>
-        <members>*</members>
-        <name>ApexComponent</name>
-    </types>
-    <types>
-        <members>*</members>
-        <name>ApexPage</name>
-    </types>
-    <types>
-        <members>*</members>
-        <name>ApexTestSuite</name>
-    </types>
-    <types>
-        <members>*</members>
-        <name>ApexTrigger</name>
-    </types>
-    <types>
-        <members>*</members>
-        <name>AuraDefinitionBundle</name>
-    </types>
-    <types>
-        <members>*</members>
-        <name>LightningComponentBundle</name>
-    </types>
-    <types>
-        <members>*</members>
-        <name>StaticResource</name>
-    </types>
-    <types>
-        <members>New</members>
-        <name>PermissionSet</name>
-    </types>
-    <version>48.0</version>
+  <types>
+    <name>ApexClass</name>
+    <members>AccountLocationController</members>
+    <members>CaseController</members>
+  </types>
+  <types>
+    <name>PermissionSet</name>
+    <members>New</members>
+  </types>
+  <version>48.0</version>
 </Package>
